# Agnes_game_engine

./: .gitignore  Agnes_game_engine.sln  CMakeLists.txt  cmake.ps1  cmake.sh  readme.md
.cache/clangd/index/: BaseApplication.cpp.8D7257B834D66DFD.idx  BaseApplication.hpp.6A98D0877D46EEB8.idx  EmptyApplication.cpp.BA711CAC3F424F35.idx  GraphicsManager.cpp.9035BF25DAD4287B.idx  GraphicsManager.hpp.6EBE21BA135BA17C.idx  IApplication.hpp.C4C972CCBA06C9D5.idx  IRuntimeModule.hpp.D36CFACA9CE5243F.idx  Interface.hpp.A12FE0A78719A9A2.idx  main.cpp.3BFD9205D09B8E5A.idx
Empty/: EmptyApplication.cpp
Framework/Common/: Allocator.cpp  Allocator.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GfxConfiguration.h  GraphicsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp
Platform/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.hpp  copy.pso  copy.vso  helloengine_d2d.cpp  helloengine_d3d.cpp
Platform/Windows/Win32/: helloengine_win.c
